# tiberius

./: .editorconfig  .envrc  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  appveyor.ps1  appveyor.yml  docker-compose.yml  docker-mssql-2017.dockerfile  flake.nix  rust-toolchain
.buildkite/: docker.sh  pipeline.sh  publish_rustdoc.sh
.github/workflows/: test.yml
certs/: .gitignore  README.md  signing-request.config.template
docker/: docker-azure-sql-edge.dockerfile  docker-mssql-2017.dockerfile  docker-mssql-2019.dockerfile  docker-mssql-2022.dockerfile  docker-mssql.conf
docker/certs/: customCA.crt  customCA.key  customCA.srl  generate-ca.sh  generate-signed-cert.sh  server-full.crt  server.crt  server.key  server.pem
examples/: Cargo.toml  aad-auth.rs  async-std.rs  bulk.rs  named-pipes.rs  new.rs  tokio-transaction-fnonce.rs  tokio-transaction-split.rs  tokio-transaction.rs  tokio.rs
runtimes-macro/: Cargo.toml
runtimes-macro/src/: lib.rs
src/: async_read_le_ext.rs  bulk_options.rs  client.rs  client_split.rs  collation.rs  command.rs  error.rs  from_sql.rs  from_sql_json.rs  lib.rs  macros.rs  ntlm.rs  prepared.rs  protocol.rs  query.rs  result.rs  row.rs  sql_browser.rs  sql_read_bytes.rs  stmt.rs  tds.rs  tls.rs  to_sql.rs  tokens.rs  transaction.rs  transport.rs  types.rs
src/client/: auth.rs  azure_root_certs.rs  builder.rs  config.rs  connection.rs  no_cert_verifier.rs  tls.rs  tls_stream.rs
src/client/config/: ado_net.rs  jdbc.rs
src/client/tls_stream/: native_tls_stream.rs  opentls_tls_stream.rs  rustls_tls_stream.rs
src/protocol/: codec.rs
src/protocol/codec/: column_data.rs  header.rs  token.rs  type_info.rs
src/protocol/codec/token/: token_col_metadata.rs  token_env_change.rs  token_error.rs  token_info.rs  token_login_ack.rs  token_order.rs  token_return_value.rs  token_row.rs  token_sspi.rs
src/protocol/stream/: token.rs
src/protocol/types/: time.rs
src/sql_browser/: async_std.rs  smol.rs  tokio.rs
src/tds/: codec.rs  collation.rs  context.rs  numeric.rs  stream.rs  time.rs  xml.rs
src/tds/codec/: batch_request.rs  bulk_load.rs  bytes_data.rs  column_data.rs  decode.rs  encode.rs  guid.rs  header.rs  iterator_ext.rs  login.rs  packet.rs  pre_login.rs  rpc_request.rs  token.rs  type_info.rs  type_info_tvp.rs
src/tds/codec/column_data/: binary.rs  bit.rs  buf.rs  bytes_mut_with_type_info.rs  date.rs  datetime2.rs  datetimen.rs  datetimeoffsetn.rs  fixed_len.rs  float.rs  guid.rs  image.rs  int.rs  money.rs  plp.rs  string.rs  text.rs  time.rs  var_len.rs  xml.rs
src/tds/codec/token/: token_col_metadata.rs  token_done.rs  token_env_change.rs  token_error.rs  token_feature_ext_ack.rs  token_info.rs  token_login_ack.rs  token_order.rs  token_return_value.rs  token_row.rs  token_sspi.rs  token_type.rs
src/tds/codec/token/token_row/: bytes_mut_with_data_columns.rs  into_row.rs
src/tds/stream/: command.rs  prepared.rs  query.rs  token.rs
src/tds/time/: chrono.rs  time.rs
src/tds/types/: collation.rs  time.rs
src/types/: mod.rs  time.rs
tests/: Cargo.toml  bulk.rs  command.rs  custom-cert.rs  deadlocks.rs  login_errors.rs  named-instance-async.rs  named-instance-smol.rs  named-instance-tokio.rs  query.rs  query.rs.bak  query_asyncstd.rs  query_new.rs  query_smol.rs  query_tokio.rs
tiberius/: Cargo.toml
tiberius-async-std/: Cargo.toml
tiberius-async-std/src/: lib.rs
tiberius-asyncstd/: Cargo.toml
tiberius-asyncstd/src/: lib.rs
tiberius-smol/: Cargo.toml
tiberius-smol/src/: lib.rs
tiberius-tokio/: Cargo.toml
tiberius-tokio/src/: lib.rs
tiberius/examples/: new.rs
tiberius/src/: async_read_le_ext.rs  client.rs  collation.rs  connect.rs  cursor.rs  error.rs  lib.rs  macros.rs  plp.rs  prepared.rs  protocol.rs  query.rs  result.rs  row.rs  sql_read_bytes.rs  statement.rs  stmt.rs  tls.rs  tokens.rs  transaction.rs  transport.rs
tiberius/src/client/: builder.rs  connection.rs  tls.rs
tiberius/src/protocol/: codec.rs  login.rs  mod.rs  rpc.rs  stream.rs  tokenstream.rs  types.rs
tiberius/src/protocol/codec/: column_data.rs  decode.rs  encode.rs  header.rs  login.rs  packet.rs  pre_login.rs  rpc_request.rs  token_col_metadata.rs  token_done.rs  token_env_change.rs  token_error.rs  token_info.rs  token_login_ack.rs  token_order.rs  token_return_value.rs  token_row.rs  token_type.rs  type_info.rs
tiberius/src/protocol/codec/token/: token_col_metadata.rs  token_done.rs  token_env_change.rs  token_error.rs  token_info.rs  token_login_ack.rs  token_order.rs  token_return_value.rs  token_row.rs  token_sspi.rs  token_type.rs
tiberius/src/protocol/stream/: prepared.rs  query.rs  token.rs
tiberius/src/protocol/types/: numeric.rs  time.rs
tiberius/src/tds/: numeric.rs  time.rs
tiberius/src/tds/codec/: rpc_request.rs  type_info.rs
tiberius/src/tds/codec/token/: token_col_metadata.rs
tiberius/src/tds/stream/: token.rs
tiberius/src/types/: mod.rs  numeric.rs  time.rs
tiberius/tests/: query.rs
tvp-macro/: Cargo.toml
tvp-macro/src/: attr.rs  lib.rs  table_value_param.rs
