[package]
authors = [
    "Steffen Butzer <steffen.butzer@outlook.com>",
    "Julius de Bruijn <bruijn@prisma.io>",
    "Eric Sheppard <eric@eigenmo.de>",
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
]
description = "A TDS (MSSQL) driver"
documentation = "https://docs.rs/tiberius/"
edition = "2021"
keywords = ["tds", "mssql", "sql"]
license = "MIT/Apache-2.0"
name = "tiberius"
readme = "README.md"
repository = "https://github.com/prisma/tiberius"
version = "0.7.1"

[workspace]
members = ["runtimes-macro"]

[[test]]
path = "tests/query.rs"
name = "query"

[[test]]
path = "tests/named-instance-async.rs"
name = "named-instance-async"
required-features = ["sql-browser-async-std"]

[[test]]
path = "tests/named-instance-tokio.rs"
name = "named-instance-tokio"
required-features = ["sql-browser-tokio"]

[[test]]
path = "tests/named-instance-smol.rs"
name = "named-instance-smol"
required-features = ["sql-browser-smol"]

[dependencies]
enumflags2 = "0.7"
byteorder = "1.0"
encoding = "0.2"
once_cell = "1.3"
thiserror = "1.0"
bytes = "1.0"
pretty-hex = "0.1"
pin-project-lite = "0.2"
asynchronous-codec = "0.5"
futures-sink = "0.3"
async-trait = "0.1"
connection-string = "0.1.4"
num-traits = "0.2"
uuid = "0.8"

[target.'cfg(windows)'.dependencies]
winauth = { version = "0.0.4", optional = true }

[target.'cfg(unix)'.dependencies]
libgssapi = { version = "0.4.5", optional = true, default-features = false }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
opentls = { version = "0.2.1", features = ["io-async-std"]}

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
async-native-tls = { version = "0.4", features = ["runtime-async-std"] }

[dependencies.tokio]
version = "1.0"
optional = true
features = ["net", "time"]

[dependencies.tokio-util]
version = "0.6"
features = ["compat"]
optional = true

[dependencies.async-std]
version = "1"
optional = true
features = ["attributes"]

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.futures]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.rust_decimal]
version = "1.6"
optional = true

[dependencies.bigdecimal_]
version = "0.2.0"
optional = true
package = "bigdecimal"

[dependencies.async-io]
version = "1.4.1"
optional = true

[dependencies.async-net]
version = "1.4.1"
optional = true

[dependencies.futures-lite]
version = "1.12.0"
optional = true

[dev-dependencies.uuid]
version = "0.8"
features = ["v4"]

[dev-dependencies.tokio-util]
version = "0.6"
features = ["compat"]

[dev-dependencies.tokio]
features = ["macros", "sync", "io-std", "time", "io-util", "net", "rt-multi-thread"]
version = "1.0"

[dev-dependencies.async-std]
features = ["attributes"]
version = "1"

[dev-dependencies.runtimes-macro]
path = "./runtimes-macro"

[dev-dependencies]
names = "0.11"
anyhow = "1"
env_logger = "0.7"

[package.metadata.docs.rs]
features = ["all", "docs"]

[features]
all = [
    "chrono",
    "tds73",
    "sql-browser-async-std",
    "sql-browser-tokio",
    "sql-browser-smol",
    "integrated-auth-gssapi",
    "rust_decimal",
    "bigdecimal"
]
default = ["tds73", "winauth"]
vendored-openssl = ["opentls/vendored", "async-native-tls/vendored"]
tds73 = []
docs = []
sql-browser-async-std = ["async-std"]
sql-browser-tokio = ["tokio", "tokio-util"]
sql-browser-smol = ["async-io", "async-net", "futures-lite"]
integrated-auth-gssapi = ["libgssapi"]
bigdecimal = [ "bigdecimal_"]
