[package]
authors = [
    "Steffen Butzer <steffen.butzer@outlook.com>",
    "Julius de Bruijn <bruijn@prisma.io>",
    "Eric Sheppard <eric@eigenmo.de>",
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
]
description = "A TDS (MSSQL) driver"
documentation = "https://docs.rs/tiberius/"
edition = "2021"
keywords = ["tds", "mssql", "sql"]
license = "MIT/Apache-2.0"
name = "tiberius"
readme = "README.md"
repository = "https://github.com/prisma/tiberius"
version = "0.12.2"

[workspace]
members = ["runtimes-macro"]

[[test]]
path = "tests/query.rs"
name = "query"

[[test]]
path = "tests/named-instance-async.rs"
name = "named-instance-async"
required-features = ["sql-browser-async-std"]

[[test]]
path = "tests/named-instance-tokio.rs"
name = "named-instance-tokio"
required-features = ["sql-browser-tokio"]

[[test]]
path = "tests/named-instance-smol.rs"
name = "named-instance-smol"
required-features = ["sql-browser-smol"]

[dependencies]
enumflags2 = "0.7"
byteorder = "1.0"
encoding_rs = "0.8"
once_cell = "1.3"
thiserror = "1.0"
bytes = "1.0"
pretty-hex = "0.3"
pin-project-lite = "0.2"
asynchronous-codec = "0.6"
async-trait = "0.1"
connection-string = "0.2"
num-traits = "0.2"
uuid = "1.0"

[target.'cfg(windows)'.dependencies]
winauth = { version = "0.0.4", optional = true }

[target.'cfg(unix)'.dependencies]
libgssapi = { version = "0.4.5", optional = true, default-features = false }

[dependencies.async-native-tls]
version = "0.4"
features = ["runtime-async-std"]
optional = true

[dependencies.tokio]
version = "1.0"
optional = true
features = ["net", "time"]

[dependencies.tokio-util]
version = "0.7"
features = ["compat"]
optional = true

[dependencies.async-std]
version = "1"
optional = true
features = ["attributes"]

[dependencies.chrono]
version = "0.4"
optional = true
default-features = false

[dependencies.time]
version = "0.3"
optional = true

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["io", "sink"]

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.rust_decimal]
version = "1.6"
optional = true

[dependencies.bigdecimal_]
version = "0.3"
optional = true
package = "bigdecimal"

[dependencies.async-io]
version = "1.8"
optional = true

[dependencies.async-net]
version = "1.7"
optional = true

[dependencies.futures-lite]
version = "1.12.0"
optional = true

[dependencies.tokio-rustls]
version = "0.24.0"
optional = true
features = ["dangerous_configuration"]

[dependencies.rustls-pemfile]
version = "1"
optional = true

[dependencies.rustls-native-certs]
version = "0.6"
optional = true

[dependencies.opentls]
version = "0.2.1"
optional = true
features = ["io-async-std", "vendored"]

[dev-dependencies.uuid]
version = "1.0"
features = ["v4"]

[dev-dependencies.tokio-util]
version = "0.7"
features = ["compat"]

[dev-dependencies.tokio]
features = [
    "macros",
    "sync",
    "io-std",
    "time",
    "io-util",
    "net",
    "rt-multi-thread",
]
version = "1.0"

[dev-dependencies.async-std]
features = ["attributes"]
version = "1"

[dev-dependencies.runtimes-macro]
path = "./runtimes-macro"

[dev-dependencies]
names = "0.14"
anyhow = "1"
env_logger = "0.9"
azure_identity = "0.5.0"
oauth2 = "4.2.3"
url = "2.2.2"
reqwest = "0.11.10"
paste = "1.0"
indicatif = "0.17"
chrono = "0.4.38"
indoc = "1.0.7"

[package.metadata.docs.rs]
features = ["all", "docs"]

[features]
all = [
    "chrono",
    "time",
    "tds73",
    "sql-browser-async-std",
    "sql-browser-tokio",
    "sql-browser-smol",
    "integrated-auth-gssapi",
    "rust_decimal",
    "bigdecimal",
    "native-tls",
]
default = ["tds73", "winauth", "native-tls"]
tds73 = []
docs = []
sql-browser-async-std = ["async-std"]
sql-browser-tokio = ["tokio", "tokio-util"]
sql-browser-smol = ["async-io", "async-net", "futures-lite"]
integrated-auth-gssapi = ["libgssapi"]
bigdecimal = ["bigdecimal_"]
rustls = ["tokio-rustls", "tokio-util", "rustls-pemfile", "rustls-native-certs"]
native-tls = ["async-native-tls"]
vendored-openssl = ["opentls"]
