[package]
authors = ["Steffen Butzer <steffen.butzer@outlook.com>", "Julius de Bruijn <bruijn@prisma.io>"]
description = "A TDS (MSSQL) driver"
documentation = "https://docs.rs/tiberius-asyncstd/"
edition = "2018"
keywords = ["tds", "mssql", "sql"]
license = "MIT/Apache-2.0"
name = "tiberius-asyncstd"
readme = "README.md"
repository = "https://github.com/prisma/tiberius"
version = "0.4.0-alpha.5"

[dependencies.tiberius]
path = "../tiberius"
version = "0.4.0-alpha.5"

[dependencies.async-std]
features = ["attributes"]
version = "1"

[dependencies.futures]
version = "0.3"

[features]
default = ["tiberius/tls", "tiberius/chrono", "tiberius/tds73"]
tls = ["tiberius/async-native-tls"]
tds73 = []
