[package]
authors = ["Steffen Butzer <steffen.butzer@outlook.com>", "Julius de Bruijn <bruijn@prisma.io>"]
description = "Tokio frontend for Tiberius MSSQL Driver"
documentation = "https://docs.rs/tiberius-tokio/"
edition = "2018"
keywords = ["tds", "mssql", "sql"]
license = "MIT/Apache-2.0"
name = "tiberius-tokio"
readme = "README.md"
repository = "https://github.com/prisma/tiberius"
version = "0.4.0-alpha.5"

[dependencies.tiberius]
path = "../tiberius"
version = "0.4.0-alpha.5"

[dependencies.tokio-util]
version = "0.3"
features = ["compat"]

[dependencies.tokio]
version = "0.2"
features = ["io-std", "io-util", "tcp", "dns"]

[dependencies.futures]
version = "0.3"

[features]
default = ["tiberius/tls", "tiberius/chrono", "tiberius/tds73"]
tls = ["tiberius/async-native-tls"]
tds73 = []
