[package]
authors = ["Steffen Butzer <steffen.butzer@outlook.com>", "Julius de Bruijn <bruijn@prisma.io>"]
description = "A TDS (MSSQL) driver"
documentation = "https://docs.rs/tiberius/"
edition = "2018"
keywords = ["tds", "mssql", "sql"]
license = "MIT/Apache-2.0"
name = "tiberius"
readme = "../README.md"
repository = "https://github.com/steffengy/tiberius"
version = "0.4.0"

[dependencies]
async-stream = "0.2"
bitflags = "1.0"
byteorder = "1.0"
encoding = "0.2"
once_cell = "1.3"
parking_lot = "0.10"
thiserror = "1.0"
bytes = "0.5"
pretty-hex = "0.1"
pin-project-lite = "0.1"

[dependencies.tokio-util]
version = "0.3"
features = ["codec"]

[dependencies.futures]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.native-tls]
optional = true
version = "0.2.1"

[dependencies.tokio]
features = ["sync", "io-std", "stream", "time", "io-util", "tcp", "udp"]
version = "0.2"

[dependencies.tokio-tls]
optional = true
version = "0.3"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.winauth]
version = "0.0.4"

[dev-dependencies]
env_logger = "0.7"

[dev-dependencies.tokio]
features = ["macros"]
version = "0.2"

[dev-dependencies.anyhow]
version = "1"

[features]
default = ["tls"]
tls = ["native-tls", "tokio-tls"]
