[package]
authors = ["Steffen Butzer <steffen.butzer@outlook.com>", "Julius de Bruijn <bruijn@prisma.io>"]
description = "A TDS (MSSQL) driver"
documentation = "https://docs.rs/tiberius/"
edition = "2018"
keywords = ["tds", "mssql", "sql"]
license = "MIT/Apache-2.0"
name = "tiberius"
readme = "README.md"
repository = "https://github.com/prisma/tiberius"
version = "0.4.0-alpha.5"

[dependencies]
async-stream = "0.2"
bitflags = "1.0"
byteorder = "1.0"
encoding = "0.2"
once_cell = "1.3"
thiserror = "1.0"
bytes = "0.5"
pretty-hex = "0.1"
pin-project-lite = "0.1"
futures_codec = "0.4"
futures-sink = "0.3"

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.uuid]
version = "0.8"
features = ["v1", "v3", "v4"]

[dependencies.futures]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.async-native-tls]
optional = true
version = "0.3"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.rust_decimal]
version = "1.5"
optional = true

[dependencies.winauth]
version = "0.0.4"

[dev-dependencies]
env_logger = "0.7"

[dev-dependencies.tokio-util]
version = "0.3"
features = ["compat"]

[dev-dependencies.tokio]
features = ["macros", "sync", "io-std", "stream", "time", "io-util", "tcp", "udp", "dns"]
version = "0.2"

[dev-dependencies.tiberius-tokio]
version = "0.4.0-alpha.5"
path = "../tiberius-tokio"

[dev-dependencies.smol]
version = "0.1"

[dev-dependencies.async-std]
features = ["attributes"]
version = "1"

[dev-dependencies.anyhow]
version = "1"

[features]
default = ["tls", "chrono", "tds73"]
tls = ["async-native-tls"]
tds73 = []
